<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".SplashScreen"
    android:orientation="horizontal"
    android:background="@drawable/weather_background">

    <ImageView
        android:id="@+id/cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp"
        android:src="@drawable/white_cloud"
        android:contentDescription="@string/app_name">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cloud"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tag_line"
        android:textColor="@color/white"
        android:fontFamily="@font/merriweathersans_bold"
        android:textSize="25sp"
        android:textAlignment="center">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/design_by"
        android:textColor="@color/white"
        android:fontFamily="@font/merriweathersans_medium"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textAlignment="center">
    </TextView>
</RelativeLayout>